cfg: backends configurable as a normal cfg var

--- a/bld/Makefile
+++ b/bld/Makefile
@@ -1,6 +1,10 @@
 LIB = libio
 
 OBJECTS = \
-	empty.o \
+	console_$(LIBIO_BACKEND).o \
+
+ifeq ($(LIBIO_BACKEND),)
+$(error No libio backend defined: LIBIO_BACKEND)
+endif # LIBIO_BACKEND
 
 override SRC_ROOT = ../../src
