cfg: flag setting to .options; options for in/out

--- a/bld/Makefile.config
+++ b/bld/Makefile.config
@@ -4,3 +4,9 @@
 # The backend for I/O (e.g. 'hwuart', 'swuart', etc.)
 # See 'ls console_*.c' for available implementations.
 LIBIO_BACKEND ?= hwuart
+
+# Include functionality for outputing data to console
+LIBIO_OUT ?= 1
+
+# Include functionality for receiving data from console
+LIBIO_IN ?= 0
