cfg: don't default to a backend
fixes builds without printf

--- a/bld/Makefile.config
+++ b/bld/Makefile.config
@@ -3,7 +3,7 @@
 
 # The backend for I/O (e.g. 'hwuart', 'swuart', etc.)
 # See 'ls console_*.c' for available implementations.
-LIBIO_BACKEND ?= hwuart
+LIBIO_BACKEND ?=
 
 # Include functionality for outputing data to console
 LIBIO_OUT ?= 1
