added support for riscv and various backends

--- a/Makefile.config
+++ b/Makefile.config
@@ -3,10 +3,4 @@
 
 # The backend for I/O (e.g. 'hwuart', 'swuart', etc.)
 # See 'ls console_*.c' for available implementations.
-LIBIO_BACKEND ?=
-
-# Include functionality for outputing data to console
-LIBIO_OUT ?= 1
-
-# Include functionality for receiving data from console
-LIBIO_IN ?= 0
+LIBIO_BACKEND ?= spike
